fix: horizontal scroll heigth fix

--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -132,6 +132,7 @@ table {
 
 .scroll::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
 
 .scroll::-webkit-scrollbar-track {
